--- a/FribergsCarRental/Pages/Cars/CarIndex.cshtml
+++ b/FribergsCarRental/Pages/Cars/CarIndex.cshtml
@@ -8,7 +8,7 @@
 <h1>CarIndex</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="CreateCar">Create New</a>
 </p>
 <table class="table">
     <thead>
