--- a/FribergsCarRental/Pages/Customers/CreateCustomer.cshtml
+++ b/FribergsCarRental/Pages/Customers/CreateCustomer.cshtml
@@ -12,7 +12,8 @@
 <div class="row">
     <div class="col-md-4">
         <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input asp-for="Customer.CustomerId" type="hidden" />
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Customer.FirstName" class="control-label"></label>
                 <input asp-for="Customer.FirstName" class="form-control" />
@@ -45,5 +46,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
