--- a/FribergsCarRental/Pages/Customers/CustomerIndex.cshtml
+++ b/FribergsCarRental/Pages/Customers/CustomerIndex.cshtml
@@ -8,7 +8,7 @@
 <h1>CustomerIndex</h1>
 
 <p>
-    <a asp-page="CreateCustomer">Create New</a>
+    <a asp-page="CreateCustomer">Create Neeew</a>
 </p>
 <table class="table">
     <thead>
@@ -44,9 +44,9 @@
                 @Html.DisplayFor(modelItem => item.Password)
             </td>
             <td>
-                <a asp-page="./EditCustomer" asp-route-id="@item.CustomerId">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.CustomerId">Details</a> |
-                <a asp-page="./DeleteCustomer" asp-route-id="@item.CustomerId">Delete</a>
+                <a asp-page="EditCustomer" asp-route-id="@item.CustomerId">Edit</a> |
+                <a asp-page="Details" asp-route-id="@item.CustomerId">Details</a> |
+                <a asp-page="DeleteCustomer" asp-route-id="@item.CustomerId">Delete</a>
             </td>
         </tr>
 }
