Entire Customer Crud works (haven't added repository connection to Details though)

--- a/FribergsCarRental/Pages/Customers/DeleteCustomer.cshtml
+++ b/FribergsCarRental/Pages/Customers/DeleteCustomer.cshtml
@@ -41,6 +41,6 @@
     <form method="post">
         <input type="hidden" asp-for="Customer.CustomerId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./CustomerIndex">Back to List</a>
+        <a asp-page="CustomerIndex">Back to List</a>
     </form>
 </div>
