--- a/FribergsCarRental/Pages/Customers/EditCustomer.cshtml
+++ b/FribergsCarRental/Pages/Customers/EditCustomer.cshtml
@@ -42,7 +42,7 @@
 </div>
 
 <div>
-    <a asp-page="./CustomerIndex">Back to List</a>
+    <a asp-page="CustomerIndex">Back to List</a>
 </div>
 
 @section Scripts {
