--- a/FribergsCarRental/Pages/Users/DeleteUser.cshtml
+++ b/FribergsCarRental/Pages/Users/DeleteUser.cshtml
@@ -45,7 +45,7 @@
     </dl>
 
     <form method="post">
-        <input type="hidden" asp-for="TheUser.UserId" />
+        <input type="hidden" asp-for="TheUser.TheUserId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="UserIndex">Back to List</a>
     </form>
