--- a/FribergsCarRental/Pages/Users/AdminPage.cshtml
+++ b/FribergsCarRental/Pages/Users/AdminPage.cshtml
@@ -1,14 +1,14 @@
 ﻿@page
-@model FribergsCarRental.Pages.Users.IndexModel
+@model FribergsCarRental.Pages.Users.AdminPageModel
 
 @{
-    ViewData["Title"] = "UserIndex";
+    ViewData["Title"] = "AdminPage";
 }
 
-<h1>Index</h1>
+<h1>AdminPage</h1>
 
 <p>
-    <a asp-page="CreateUser">Create New</a>
+    <a asp-page="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -32,15 +32,14 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model.TheUser)
-        {
+@foreach (var item in Model.TheUser) {
         <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FirstName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastName)
-                </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
@@ -51,9 +50,9 @@
                 @Html.DisplayFor(modelItem => item.IsAdmin)
             </td>
             <td>
-                <a asp-page="EditUser" asp-route-id="@item.TheUserId">Edit</a> |
-                <a asp-page="Details" asp-route-id="@item.TheUserId">Details</a> |
-                <a asp-page="DeleteUser" asp-route-id="@item.TheUserId">Delete</a>
+                <a asp-page="./Edit" asp-route-id="@item.TheUserId">Edit</a> |
+                <a asp-page="./Details" asp-route-id="@item.TheUserId">Details</a> |
+                <a asp-page="./Delete" asp-route-id="@item.TheUserId">Delete</a>
             </td>
         </tr>
 }
