--- a/FribergsCarRental/Pages/Users/CreateUser.cshtml
+++ b/FribergsCarRental/Pages/Users/CreateUser.cshtml
@@ -12,7 +12,7 @@
 <div class="row">
     <div class="col-md-4">
         <form method="post">
-            <input asp-for="TheUser.UserId" type="hidden" />
+            <input asp-for="TheUser.TheUserId" type="hidden" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="TheUser.FirstName" class="control-label"></label>
