--- a/FribergsCarRental/Pages/Users/EditUser.cshtml
+++ b/FribergsCarRental/Pages/Users/EditUser.cshtml
@@ -13,7 +13,7 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="TheUser.UserId" />
+            <input type="hidden" asp-for="TheUser.TheUserId" />
             <div class="form-group">
                 <label asp-for="TheUser.FirstName" class="control-label"></label>
                 <input asp-for="TheUser.FirstName" class="form-control" />
