--- a/FribergsCarRental/Pages/Users/AdminPage.cshtml
+++ b/FribergsCarRental/Pages/Users/AdminPage.cshtml
@@ -9,5 +9,5 @@
 <div>
 <a asp-page="/Cars/CarIndex" asp-page-handler="OnGetCars">Bilar</a> |
 <a asp-page="/Users/UserIndex" asp-page-handler="OnGetUsers">Kunder</a> |
-@* <a asp-page="/Bookings/BookingIndex">Bokningar</a> *@
+<a asp-page="/Bookings/BookingIndex" asp-page-handler="OnGetBookings">Bokningar</a>
 </div>
