--- a/FribergsCarRental/Pages/Users/LogIn.cshtml
+++ b/FribergsCarRental/Pages/Users/LogIn.cshtml
@@ -1,5 +1,33 @@
 ﻿@page
 @model FribergsCarRental.Pages.Users.LogInModel
+@{
+    ViewData["Title"] = "LogIn";
+}
+
+
+@* <h1>Login</h1>
+
+<form method="post">
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <input type="hidden" asp-for="TheUser.TheUserId" />
+    <input type="hidden" asp-for="TheUser.FirstName" />
+    <input type="hidden" asp-for="TheUser.LastName" />
+    <input type="hidden" asp-for="TheUser.IsAdmin" />
+    <div class="form-group">      
+        <label asp-for="TheUser.Email" class="control-label">Email</label>
+        <input asp-for="TheUser.Email" class="form-control" />
+        <span asp-validation-for="TheUser.Email" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label asp-for="TheUser.Password" class="control-label">Password</label>
+        <input asp-for="TheUser.Password" type="password" class="form-control" />
+        <span asp-validation-for="TheUser.Password" class="text-danger"></span>
+    </div>
+
+    <button type="submit" class="btn btn-primary">Logga in</button>
+</form> *@
+
 
 <h1>Login</h1>
 
