--- a/FribergsCarRental/Pages/Bookings/CreateBooking.cshtml
+++ b/FribergsCarRental/Pages/Bookings/CreateBooking.cshtml
@@ -9,11 +9,14 @@
 
 <h4>Booking</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+
+
+
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input asp-for="Booking.BookingId" type="hidden" />
+            <input asp-for="Booking.Car" type="hidden" />
+    <input asp-for="Booking.TheUser" type="hidden" />
+
             <div class="form-group">
                 <label asp-for="Booking.StartDate" class="control-label"></label>
                 <input asp-for="Booking.StartDate" class="form-control" />
@@ -23,21 +26,14 @@
                 <label asp-for="Booking.EndDate" class="control-label"></label>
                 <input asp-for="Booking.EndDate" class="form-control" />
                 <span asp-validation-for="Booking.EndDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Booking.Price" class="control-label"></label>
-                <input asp-for="Booking.Price" class="form-control" />
-                <span asp-validation-for="Booking.Price" class="text-danger"></span>
-            </div>
+            </div>     
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
-        </form>
-    </div>
-</div>
+        </form>    
 
 <div>
-    <a asp-page="Index">Back to List</a>
+    <a asp-page="/Bookings/BookingIndex">Tillbaka</a>
 </div>
 
 @section Scripts {
