--- a/FribergsCarRental/Pages/Cars/CarIndex.cshtml
+++ b/FribergsCarRental/Pages/Cars/CarIndex.cshtml
@@ -4,7 +4,7 @@
 @{
     ViewData["Title"] = "CarIndex";
 }
-<h1>CarIndex</h1>
+<h1>Bilar</h1>
 
     <table class="table">
         <thead>
@@ -34,17 +34,20 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.PictureURL)
                     </td>
-                <a asp-page="/Bookings/CreateBooking" asp-route-id="@item.CarId">Boka</a>
+                @* <a asp-page="/Bookings/CreateBooking" asp-route-id="@item.CarId">Boka</a> *@
                 @if (Model.TheUser.Any(u => u.IsAdmin))
                     {
                     <td>
+                        <a asp-page="/Bookings/CreateBooking" asp-route-id="@item.CarId">Boka</a>
                         <a asp-page="EditCar" asp-route-id="@item.CarId">Edit</a> |
                         <a asp-page="Details" asp-route-id="@item.CarId">Details</a> |
                         <a asp-page="DeleteCar" asp-route-id="@item.CarId">Delete</a> |
                     </td>         
                     }
                 </tr>
+                
             }
+
         </tbody>
     </table>
 
