--- a/FribergsCarRental/Pages/Users/CustomerPage.cshtml
+++ b/FribergsCarRental/Pages/Users/CustomerPage.cshtml
@@ -40,6 +40,7 @@
                     </td>
                     <td>
                         <a asp-page="/Bookings/BookingIndex" asp-route-id="@item.CarId">Boka</a>
+                  @*   <a asp-page="/Bookings/BookingIndex" asp-page-handler="OnGetCreateBooking" asp-route-id="@item.CarId">Boka</a> *@
                     </td>
                 </tr>
             }
