Added some annotations on TheUser model, created a Skapa konto-option in Login (not completely functioning)

--- a/FribergsCarRental/Pages/Users/LogIn.cshtml
+++ b/FribergsCarRental/Pages/Users/LogIn.cshtml
@@ -29,16 +29,16 @@
 </form> *@
 
 
-<h1>Login</h1>
+<h1>Logga in</h1>
 
 <form method="post">
     <div asp-validation-summary="All" class="text-danger"></div>
 
     <div class="form-group">
      <input type="hidden" asp-for="TheUser.TheUserId" />
-        <input type="hidden" asp-for="TheUser.FirstName" />
+@*         <input type="hidden" asp-for="TheUser.FirstName" />
         <input type="hidden" asp-for="TheUser.LastName" />
-        <input type="hidden" asp-for="TheUser.IsAdmin" /> 
+        <input type="hidden" asp-for="TheUser.IsAdmin" />  *@
         <label asp-for="TheUser.Email" class="control-label">Email</label>
         <input asp-for="TheUser.Email" class="form-control" />
         <span asp-validation-for="TheUser.Email" class="text-danger"></span>
@@ -50,5 +50,8 @@
         <span asp-validation-for="TheUser.Password" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-primary">Logga in</button>
 </form>
+
+        <h1>Skapa nytt konto</h1>
+        <a asp-page="/Users/CreateUser">Skapa konto</a>
