--- a/FribergsCarRental/Pages/Users/CreateUser.cshtml
+++ b/FribergsCarRental/Pages/Users/CreateUser.cshtml
@@ -13,6 +13,7 @@
     <div class="col-md-4">
         <form method="post">
             <input asp-for="TheUser.TheUserId" type="hidden" />
+            <input asp-for="TheUser.IsAdmin" type="hidden" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="TheUser.FirstName" class="control-label"></label>
@@ -34,20 +35,20 @@
                 <input asp-for="TheUser.Password" class="form-control" />
                 <span asp-validation-for="TheUser.Password" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
+  @*           <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="TheUser.IsAdmin" /> @Html.DisplayNameFor(model => model.TheUser.IsAdmin)
                 </label>
-            </div>
+            </div> *@
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Skapa" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-page="UserIndex">Back to List</a>
+    <a asp-page="/Bookings/CustomerPage">Back to List</a>
 </div>
 
 @section Scripts {
@@ -55,38 +56,3 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
-@* <div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input asp-for="TheUser.UserId" type="hidden" />
-            <div class="form-group">
-                <label asp-for="User.Email" class="control-label"></label>
-                <input asp-for="User.Email" class="form-control" />
-                <span asp-validation-for="User.Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="User.Password" class="control-label"></label>
-                <input asp-for="User.Password" class="form-control" />
-                <span asp-validation-for="User.Password" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="TheUser.IsAdmin" /> @Html.DisplayNameFor(model => model.TheUser.IsAdmin)
-                </label>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
-
-<div>
-    <a asp-page="UserIndex">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
- *@
