--- a/FribergsCarRental/Pages/Index.cshtml
+++ b/FribergsCarRental/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Välkommen!</h1>
+    <p>Intresserad av att hyra en bil? Logga in eller skapa ett konto :))))</p>
 </div>
