--- a/FribergsCarRental/Pages/Users/CustomerPage.cshtml
+++ b/FribergsCarRental/Pages/Users/CustomerPage.cshtml
@@ -39,7 +39,7 @@
                         @Html.DisplayFor(modelItem => item.PictureURL)
                     </td>
                     <td>
-                        <a asp-page="/Bookings/BookingIndex" asp-route-id="@item.CarId">Boka</a>
+                        <a asp-page="/Bookings/CreateBooking" asp-route-id="@item.CarId">Boka</a>
                   @*   <a asp-page="/Bookings/BookingIndex" asp-page-handler="OnGetCreateBooking" asp-route-id="@item.CarId">Boka</a> *@
                     </td>
                 </tr>
