--- a/FribergsCarRental/Pages/Cars/EditCar.cshtml
+++ b/FribergsCarRental/Pages/Cars/EditCar.cshtml
@@ -37,7 +37,7 @@
 </div>
 
 <div>
-    <a asp-page="CarIndex">Back to List</a>
+    <a asp-page="/Users/AdminCarIndex">Back to List</a>
 </div>
 
 @section Scripts {
