--- a/FribergsCarRental/Pages/Users/LogIn.cshtml
+++ b/FribergsCarRental/Pages/Users/LogIn.cshtml
@@ -32,7 +32,7 @@
 <h1>Logga in</h1>
 
 <form method="post">
-    <div asp-validation-summary="All" class="text-danger"></div>
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
     <div class="form-group">
      <input type="hidden" asp-for="TheUser.TheUserId" />
