--- a/FribergsCarRental/Pages/Bookings/BookingIndex.cshtml
+++ b/FribergsCarRental/Pages/Bookings/BookingIndex.cshtml
@@ -52,8 +52,10 @@
             
             </tr>
         }
+      
     </tbody>
 </table>
+<a asp-page="/Users/AdminPage">Tillbaka</a>
 
 
 @section Scripts {
