--- a/FribergsCarRental/Pages/Shared/_Layout.cshtml
+++ b/FribergsCarRental/Pages/Shared/_Layout.cshtml
@@ -13,8 +13,10 @@
 <body>
     @{
         var userCookie = Context.Request.Cookies["userCookie"];
+        var adminCookie = Context.Request.Cookies["adminCookie"];
+        var customerCookie = Context.Request.Cookies["adminCookie"];
     }
-    
+
 
 
     <header>
@@ -28,15 +30,36 @@
 
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Cars/CarIndex">Bilar</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Users/Login">Admin</a>
-                        </li>
+                        @if (!string.IsNullOrEmpty(adminCookie))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Cars/CarIndex">Bilar</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Users/Login">Admin</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Users/Login">Logga ut</a>
+                            </li>
+                        }
+
+                        @if (!string.IsNullOrEmpty(customerCookie))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Users/CustomerCarIndex">Bilar</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Users/Login">Logga ut</a>
+                            </li>
+
+                        }
+
                         @if (string.IsNullOrEmpty(userCookie))
                         {
                             <li class="nav-item">
@@ -44,12 +67,12 @@
                             </li>
                         }
 
-                        @if (!string.IsNullOrEmpty(userCookie))
+                        @*      @if (!string.IsNullOrEmpty(userCookie))
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Users/Login">Logga ut</a>
-                            </li>
-                        }
+                        <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-page="/Users/Login">Logga ut</a>
+                        </li>
+                        } *@
 
                     </ul>
                 </div>
